# aufschreibesystem

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  flake.nix  governance.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
bins/: README.md
crates/c2pa-emit/: Cargo.toml
crates/c2pa-emit/src/: lib.rs
crates/ethics-audit/: Cargo.toml
crates/ethics-audit/src/: lib.rs  main.rs
crates/signal-algebra/: Cargo.toml
crates/signal-algebra/src/: lib.rs  pattern.rs  provenance.rs  synthetic.rs
crates/signal-algebra/src/examples/: iq_to_pattern.rs
docs/: ARCHITECTURE.md  candidates-and-hidden-resources.md  demo-script.md  dropped-designs.md  failure-modes.md  g6-interview-log.md  kittler-thought-fidelity.md  make-targets.md  no-prior-search-2026-05-17.md  release-status.md  supervisor-protocol.md
experiments/_wip/: README.md
fixtures/: README.md
plugins/ai/: README.md
scripts/: ethics-audit.sh  handoff-tier1-gates.sh  license-matrix-check.sh
signal-ingest/: README.md
spec/signal-algebra/: README.md
web-stage/: README.md
