# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 Kittler Aufschreibesystem Synthesizer contributors
[workspace]
resolver = "2"
members = [
    "crates/signal-algebra",
    "crates/c2pa-emit",
    "crates/ethics-audit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "local-development"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
