# SPDX-License-Identifier: MIT AND GPL-3.0-or-later AND AGPL-3.0-or-later
# SPDX-FileCopyrightText: 2026 Kittler Aufschreibesystem Synthesizer contributors
#
# License matrix (see LICENSE for full details):
#   crates/signal-algebra, crates/c2pa-emit, crates/ethics-audit  → MIT
#   signal-ingest/                                                  → GPL-3.0-or-later
#   web-stage/                                                      → AGPL-3.0-or-later
#
# [workspace.package].license below is the workspace-wide default used by
# crates.io and cargo-deny.  Crates under `crates/` inherit this value but
# each overrides it to "MIT" via `license.workspace = true` paired with their
# own per-file SPDX header.  The compound expression here ensures tooling that
# reads only Cargo.toml sees all licenses present in the repository.
[workspace]
resolver = "2"
members = [
    "crates/signal-algebra",
    "crates/c2pa-emit",
    "crates/ethics-audit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
# Compound SPDX: workspace default covers all per-directory licenses.
# Individual crates under crates/ are MIT-only; see each Cargo.toml.
license = "MIT AND GPL-3.0-or-later AND AGPL-3.0-or-later"
repository = "https://github.com/hinanohart/aufschreibesystem"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# v0.1 carve-outs — keep the loud lints loud, mute the noisy ones that
# would force every PR to add doc-comments on every match arm.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
# `missing_const_for_fn` is a nursery lint that fires on legitimately-non-const
# bodies; the upgrade is a v0.2 sweep, not a v0.1 PR gate.
missing_const_for_fn = "allow"
# `doc_markdown` forces back-ticking every proper noun (TidalCycles, GNU Radio,
# Strudel). The thought-fidelity gate already enforces doc-content quality.
doc_markdown = "allow"
# `redundant_pub_crate` is a nursery lint with too many false positives.
redundant_pub_crate = "allow"
# `option_if_let_else` rewrites are stylistic and fire on `if let Some(x) = ...`
# blocks we keep for readability.
option_if_let_else = "allow"
