# SPDX-License-Identifier: MIT
[package]
name = "c2pa-emit"
description = "Three-stage C2PA manifest chain: raw → pattern → interpretation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
signal-algebra = { path = "../signal-algebra" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lints]
workspace = true
