# SPDX-License-Identifier: MIT
[package]
name = "signal-algebra"
description = "Signal-as-syntax: physical archival signals as first-class pattern-algebra data types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# Override workspace compound SPDX: this crate is MIT-only.
license = "MIT"
repository.workspace = true

[lib]
# v0.1 ships rlib only. The architecture memo named cdylib but there is no
# `#[no_mangle] extern "C"` surface yet — a cdylib without a C ABI just
# produces a confusing build artifact and slows CI. v0.2 introduces the C
# ABI (for the `kittler-archive` binary's plugin interface) and re-adds
# `cdylib` at the same PR.
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
proptest = "1"

[[example]]
name = "iq_to_pattern"
path = "src/examples/iq_to_pattern.rs"

[lints]
workspace = true
